[package]
name = "forwarded-header-value"
version = "0.2.0"
edition = "2018"
authors = ["EasyPost <oss@easypost.com>"]
description = "Parser for values from the Forwarded header (RFC 7239)"
readme = "README.md"
repository = "https://github.com/EasyPost/rust-forwarded-header-value"
license = "ISC"
keywords = ["http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
nonempty = "0.11"
